# snapflow-bi

./: README.md  pyproject.toml  requirements.txt  test.py
dags_bi/: __init__.py
dags_bi/pipes/: ltv.py
dags_bi/pipes/tests/: test_ltv.py
dags_bi/schemas/: transaction.yml
snapflow_bi/: __init__.py
snapflow_bi/functions/transaction_ltv_model/: transaction_ltv_model.py
snapflow_bi/functions/transaction_ltv_model/tests/: test_transaction_ltv_model.py
snapflow_bi/pipes/: ltv.py
snapflow_bi/pipes/tests/: test_ltv.py
snapflow_bi/schemas/: transaction.yml
snapflow_bi/snaps/: ltv.py
snapflow_bi/snaps/tests/: test_ltv.py
tests/: test_bi.py
